# pgl

./: Readme.md  displayInfo.m  makefile  pgl.ipynb  pgl.py  pgl.yml  pglMode.sh  pyproject.toml  screen.py  setup.py  task.py
metal/: mglCommandTypes.h
metal/mglMetal.app/Contents/: Info.plist
metal/mglMetal.app/Contents/MacOS/: __preview.dylib  mglMetal  mglMetal.debug.dylib
metal/mglMetal.app/Contents/Resources/: Assets.car  default.metallib
metal/mglMetal.app/Contents/Resources/Base.lproj/Main.storyboardc/: Info.plist  MainMenu.nib  NSWindowController-B8D-0N-5wS.nib
metal/mglMetal.app/Contents/_CodeSignature/: CodeResources
pgl/: LICENSE  __init__.py  _displayInfo.m  _pglComm.py  _pglEventListener.cpp  _pglGammaTable.m  _pglTimestamp.c  _resolution.m  _socket.py  pgl.py  pglBase.py  pglBatch.py  pglCalibration.py  pglCommandReplayer.py  pglData.py  pglDevice.py  pglDialog.py  pglDialogStandalone.py  pglDraw.py  pglEvent.py  pglEventListener.py  pglExperiment.py  pglEyeTracker.py  pglEyelink.py  pglFrameGrab.py  pglGammaTable.py  pglImage.py  pglKeyboardMouse.py  pglLabJack.py  pglParameter.py  pglProfile.py  pglResolution.py  pglSerialize.py  pglSettings.py  pglStaircase.py  pglStimuli.py  pglTasks.py  pglTimestamp.py  pglTrackPixx.py  pglTraitsDialogStandalone.py  (+4 more)
pgl.egg-info/: PKG-INFO  SOURCES.txt
tutorials/: experiment.ipynb  eyelink.ipynb  eyelinkTest.py  keyboard.ipynb  moncalib.ipynb  movies.ipynb  params.ipynb  profiling.ipynb  psychophysics.ipynb  replay.ipynb  retinotopy.ipynb  stimuli.ipynb  vpixx.ipynb
